Correction d'une typo et enregistrement du cours 4 jusque CSV reader et writer

--- a/Chapitre 2 - Les fonctions et les fichiers.ipynb
+++ b/Chapitre 2 - Les fonctions et les fichiers.ipynb
@@ -899,7 +899,7 @@
     "Pour finir cette section, voici un récapitulatif des concepts appris. Lisez la liste et posez des questions si certaines choses ne sont pas claires.\n",
     "\n",
     "- `def`\n",
-    "- paramètes et argument\n",
+    "- paramètres et argument\n",
     "- portée des variables (*scope*)\n",
     "- documentation reStructuredText\n",
     "- `set()`"
