--- a/Chapitre 4.1 - CSV, JSON et requetes.ipynb
+++ b/Chapitre 4.1 - CSV, JSON et requetes.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chapitre 4 - Les fichiers CSV, les fichiers JSON et les requêtes"
+    "# Chapitre 4.1 - Les fichiers CSV, JSON et les requêtes"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Rappel : ce qu'est un fichier CSV\n",
+    "## Le format CSV\n",
     "\n",
     "Un fichier CSV est un fichier de tableau simplifié au maximum :\n",
     "- le fichier est encodé en plein texte, il peut être lu par un éditeur de texte lambda\n",
@@ -26,6 +26,7 @@
    "metadata": {},
    "source": [
     "## Les Packages\n",
+    "\n",
     "Python est fait de nombreuses fonctions de bases. Nous avons vu par exemple qu'il était possible d'utiliser facilement les fonction `len()` ou encore `print()`. Mais Python possède aussi des `packages` (le nom des librairies et bibliothèques en Python) par défault.\n",
     "\n",
     "Un package est un ensemble de modules comportant des outils tels que des fonctions et qui peuvent être assez simplement importés. Par exemple, si je voulais travailler avec le package standard pour utiliser des fichiers CSV, je ferai :"
@@ -60,8 +61,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "C'est bien mais ca ne vous dit pas grand chose non ? On voit à la limite quelque chose pour lire (`reader`) et quelque chose pour écrire (`writer`) avec *a priori* deux variations : `DictReader` et `DictWriter`. Mais cela reste vague. \n",
-    "\n",
+    "C'est bien mais ca ne vous dit pas grand chose non ? On voit à la limite quelque chose pour lire (`reader`) et quelque chose pour écrire (`writer`) avec *a priori* deux variations : `DictReader` et `DictWriter`. Mais cela reste vague. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "\n",
     "## Le package CSV\n",
@@ -70,7 +76,7 @@
     "\n",
     "Je reprends ci-dessous deux morceaux de la documentation, qui sont ceux qui vont d'abord nous intéresser.\n",
     "\n",
-    "### Lire\n",
+    "### 1. Lire\n",
     "\n",
     "Commencons par ce qui est la documentation de `reader()`\n",
     " \n",
@@ -164,7 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Écrire\n",
+    "### 2. Écrire\n",
     "\n",
     "Si lire est utile, écrire l'est tout autant, surtout lorsque l'on récupère des informations d'ici et là et que l'on veut les remettre en formes\n",
     "\n",
@@ -275,7 +281,11 @@
     "- `csv.reader()`\n",
     "- `csv.writer()`\n",
     "- `enumerate()`\n",
-    "- Lire une documentation et ses exemples"
+    "- Lire une documentation et ses exemples\n",
+    "\n",
+    "#### Ce que l'on recommande d'approfondir\n",
+    "\n",
+    "Si les fonctions `csv.reader()` et `csv.writer()` sont sympathiques, les fonctions `DictReader` et `DictWriter` le sont beaucoup plus : elles stockent les noms de colonnes ! *Cf.* [la documentation](https://docs.python.org/3.5/library/csv.html#csv.DictReader)"
    ]
   }
  ],
