Update Chapitre 2 - Les fonctions et les fichiers.ipynb

--- a/Chapitre 2 - Les fonctions et les fichiers.ipynb
+++ b/Chapitre 2 - Les fonctions et les fichiers.ipynb
@@ -1406,9 +1406,9 @@
     "    :param fichier: Fichier ouvert pour l'écriture\n",
     "    :type fichier: TextIOWrapper\n",
     "    \"\"\"\n",
-    "    distribution.write(\"Mot;Distribution\\n\")\n",
+    "    fichier.write(\"Mot;Distribution\\n\")\n",
     "    for mot, frequence in distribution.items():\n",
-    "        distribution.write(mot + \";\" + str(frequence) + '\\n')\n",
+    "        fichier.write(mot + \";\" + str(frequence) + '\\n')\n",
     "\n",
     "# Ouvrir le fichier et stocker son contenu\n",
     "\n",
