Ajout de la correction des exercices et augmentation du .gitignore

--- a/Chapitre 4.1 - CSV, JSON et requetes.ipynb
+++ b/Chapitre 4.1 - CSV, JSON et requetes.ipynb
@@ -227,9 +227,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Le fonds Delphine Seyrig dans BnF archives et manuscrits', '', 'http://www.bnf.fr/fr/la_bnf/dpt_asp/s.actualites_arts_spectacle.html?first_Art=oui', '2017-11-22 13:02:02')\n",
+      "('Interruption de la Clinique juridique après la séance du 20&#160;décembre 2017, reprise le mercredi 10&#160;janvier 2018', '', 'http://www.bnf.fr/fr/la_bnf/bibliotheque_haut-de-jardin/s.clinique_juridique.html?first_Art=non', '2017-12-15 13:21:02')\n",
+      "('La salle Labrouste fermera dès 15 h les samedis 23 et 30 décembre 2017', '', 'http://www.bnf.fr', '2017-12-18 10:03:34')\n",
+      "('À partir du 7 novembre 2017 - \\nLes accueils du département de la Reproduction évoluent !', \"Désormais, vous êtes invités à prendre rendez-vous avec l'un de nos bibliothécaires - sur les sites François-Mitterrand ou Richelieu - en utilisant notre application de réservation.\", 'https://reservation.affluences.com/site/351', '2017-11-02 10:18:55')\n",
+      "(\"jusqu'au 22 décembre 2017 - \\nLénine et la Révolution d'octobre -&#160;Bibliographie et sélection de documents\", '', 'http://www.bnf.fr/fr/collections_et_services/anx_biblios_histoire/a.biblio_octobre_1917.html', '2017-11-20 17:40:09')\n",
+      "(\"Quel est le juste prix d'une entreprise&#160;? –&#160;mini-bibliographie\", '', 'http://www.bnf.fr/documents/biblio_mini_transfair_2017.pdf', '2017-12-01 11:08:53')\n",
+      "(\"jusqu'au 15 décembre 2017 - \\nJean Rouch (1917-2004) : l'homme-cinéma -&#160;Bibliographie et sélection de documents\", '', 'http://www.bnf.fr/fr/collections_et_services/anx_biblios_philo/a.biblio_jean_rouch.html', '2017-11-20 17:37:50')\n",
+      "('Devenez mécène du salon Louis XV', 'chef-d’œuvre du XVIII<sup>e</sup> siècle', 'http://www.bnf.fr/fr/acces_dedies/mecenat_partenariat/s.mecenat_renovation_richelieu.html?first_Art=oui', '2017-09-20 09:01:26')\n",
+      "(\"jusqu'au 28 janvier 2018 - \\nLe photojournalisme -&#160;Bibliographie\", '', 'http://www.bnf.fr/fr/collections_et_services/anx_biblios_livre/a.biblio_photojournalisme.html', '2017-12-05 17:12:33')\n",
+      "('Luigi Pirandello - Sélection de documents', '', 'http://www.bnf.fr/fr/la_bnf/dpt_mjv/s.actualites_maison_jean_vilar.html?first_Art=oui', '2017-11-29 13:51:55')\n",
+      "(\"Fêtes de fin d'année : fermeture de la BnF\", 'Tous les sites de la BnF seront fermés les dimanche 24, lundi 25 et dimanche 31 décembre 2017 et le lundi 1<sup>er</sup> janvier 2018.', 'http://www.bnf.fr', '2017-12-05 09:56:13')\n",
+      "('à partir du 1er avril 2016 - \\nFermeture temporaire du musée des Monnaies, médailles et antiques', '', 'http://www.bnf.fr/fr/la_bnf/dpt_mma/s.actualites_monnaies_medailles.html?first_Art=oui', '2017-07-11 10:17:40')\n"
+     ]
+    }
+   ],
    "source": [
     "from modules_cours.chapitre4 import read_rss\n",
     "\n",
@@ -247,13 +266,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "from modules_cours.chapitre4 import read_rss\n",
+    "import csv\n",
     "\n",
-    "# Votre code ici"
+    "# Votre code ici\n",
+    "with open(\"biliopat.csv\", mode=\"w\") as bibliopat:\n",
+    "    outil_decriture_csv = csv.writer(bibliopat, delimiter='\\t')\n",
+    "    outil_decriture_csv.writerow([\"Titre\", \"Lien\", \"Date\"])\n",
+    "\n",
+    "    for titre, resume, lien, date in read_rss(\"http://www.bibliopat.fr/rss-actualites\"):\n",
+    "        outil_decriture_csv.writerow([titre, lien, date])"
    ]
   },
   {
