Adding somne clean up

--- a/Chapitre 5 - Flask, un framework d'application web.ipynb
+++ b/Chapitre 5 - Flask, un framework d'application web.ipynb
@@ -205,7 +205,16 @@
     "\n",
     "@app.route(\"/\")\n",
     "def index():\n",
-    "    return \"Hello world !\"\n",
+    "    return \"Hello world !\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lancez cette case ensuite pour lancer l'application\n",
     "\n",
     "app.run()"
    ]
@@ -233,14 +242,18 @@
     "\n",
     "### Définir des routes à paramètres\n",
     "\n",
-    "Bien sûr, écrire une route par numéro (on parle de 167.717 entrées là tout de même) parait à la fois gargantuesque et idiot. Il est donc possible de définir une route qui fonctionnerait correctement avec cet identifiant :\n",
-    "\n",
-    "```python\n",
+    "Bien sûr, écrire une route par numéro (on parle de 167.717 entrées là tout de même) parait à la fois gargantuesque et idiot. Il est donc possible de définir une route qui fonctionnerait correctement avec cet identifiant :\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "@app.route(\"/places/<place_id:int>\")\n",
     "def chemin_place(place_id):\n",
-    "    return \"On est sur \" + str(place_id)\n",
-    "```\n",
-    "\n"
+    "    return \"On est sur \" + str(place_id)"
    ]
   }
  ],
